--- a/pandas入门.ipynb
+++ b/pandas入门.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "b3224126",
    "metadata": {},
    "outputs": [],
@@ -282,9 +282,412 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5abce36d",
+   "metadata": {},
+   "source": [
+    "#### DataFrame表示的是矩阵的数据表，它包含已排序的列集合，每一列可以是不同的值类型。\n",
+    "#### DataFrame既有行索引也有列索引，它可以被视为一个共享相同索引的Series的字典。\n",
+    "#### 在DataFrame中，数据被存储为一个以上的二维块，而不是列表，字典或其他一维数组的集合。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "62555674",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    state  year  pop\n",
+      "0    Ohio  2000  1.5\n",
+      "1    Ohio  2001  1.7\n",
+      "2    Ohio  2002  3.6\n",
+      "3  Nevada  2001  2.4\n",
+      "4  Nevada  2002  2.9\n",
+      "5  Nevada  2003  3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#DataFrame的构建\n",
+    "data={'state':['Ohio','Ohio','Ohio','Nevada','Nevada','Nevada'],\n",
+    "     'year':[2000,2001,2002,2001,2002,2003],\n",
+    "     'pop':[1.5,1.7,3.6,2.4,2.9,3.2]}\n",
+    "frame=pd.DataFrame(data)\n",
+    "print(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "b8d4f4b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>state</th>\n",
+       "      <th>year</th>\n",
+       "      <th>pop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2000</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Ohio</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>2001</td>\n",
+       "      <td>2.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Nevada</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    state  year  pop\n",
+       "0    Ohio  2000  1.5\n",
+       "1    Ohio  2001  1.7\n",
+       "2    Ohio  2002  3.6\n",
+       "3  Nevada  2001  2.4\n",
+       "4  Nevada  2002  2.9"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#head方法提取表格前五行\n",
+    "frame.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "964f3760",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year   state  pop\n",
+      "0  2000    Ohio  1.5\n",
+      "1  2001    Ohio  1.7\n",
+      "2  2002    Ohio  3.6\n",
+      "3  2001  Nevada  2.4\n",
+      "4  2002  Nevada  2.9\n",
+      "5  2003  Nevada  3.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#可以指定顺序排列\n",
+    "print(pd.DataFrame(data,columns=['year','state','pop']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "77d1142e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "one      2000\n",
+      "two      2001\n",
+      "three    2002\n",
+      "four     2001\n",
+      "five     2002\n",
+      "six      2003\n",
+      "Name: year, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame2=pd.DataFrame(data,columns=['year','state','pop','debt'],\n",
+    "                   index=['one','two','three','four','five','six'])\n",
+    "print(frame2.year)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "515fd656",
+   "metadata": {},
+   "source": [
+    "#### 想要获取行信息时，可以通过loc进行提取"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "594d5cda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "year     2002\n",
+       "state    Ohio\n",
+       "pop       3.6\n",
+       "debt      NaN\n",
+       "Name: three, dtype: object"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "frame2.loc['three']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ba44954e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       year   state  pop  debt\n",
+      "one    2000    Ohio  1.5   0.0\n",
+      "two    2001    Ohio  1.7   1.0\n",
+      "three  2002    Ohio  3.6   2.0\n",
+      "four   2001  Nevada  2.4   3.0\n",
+      "five   2002  Nevada  2.9   4.0\n",
+      "six    2003  Nevada  3.2   5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#对列的引用进行修改\n",
+    "frame2['debt']=np.arange(6.)\n",
+    "print(frame2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6967676a",
+   "metadata": {},
+   "source": [
+    "#### 可以通过series给DataFrame的列赋值，更方便"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a3de1be3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       year   state  pop  debt\n",
+      "one    2000    Ohio  1.5   NaN\n",
+      "two    2001    Ohio  1.7  -1.2\n",
+      "three  2002    Ohio  3.6   NaN\n",
+      "four   2001  Nevada  2.4  -1.5\n",
+      "five   2002  Nevada  2.9  -1.7\n",
+      "six    2003  Nevada  3.2   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "val=pd.Series([-1.2,-1.5,-1.7],index=['two','four','five'])\n",
+    "frame2['debt']=val   #只改变Series中包含的索引对应的值，无需输入所有列的值\n",
+    "print(frame2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "bbcae7e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       year   state  pop  debt  eastern\n",
+      "one    2000    Ohio  1.5   NaN     True\n",
+      "two    2001    Ohio  1.7  -1.2     True\n",
+      "three  2002    Ohio  3.6   NaN     True\n",
+      "four   2001  Nevada  2.4  -1.5    False\n",
+      "five   2002  Nevada  2.9  -1.7    False\n",
+      "six    2003  Nevada  3.2   NaN    False\n"
+     ]
+    }
+   ],
+   "source": [
+    "###如果被赋予的值不存在，会生成一个新的列，删除列的时候可以用del\n",
+    "frame2['eastern']=frame2.state=='Ohio' # frame.eastern无法创建新的列\n",
+    "print(frame2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "633d6e0e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       year   state  pop  debt\n",
+      "one    2000    Ohio  1.5   NaN\n",
+      "two    2001    Ohio  1.7  -1.2\n",
+      "three  2002    Ohio  3.6   NaN\n",
+      "four   2001  Nevada  2.4  -1.5\n",
+      "five   2002  Nevada  2.9  -1.7\n",
+      "six    2003  Nevada  3.2   NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "del frame2['eastern']\n",
+    "print(frame2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "052bf6a0",
+   "metadata": {},
+   "source": [
+    "#### 从DataFrame中选取的列是数据的视图，而不是拷贝。因此，对Series的修改会映射到DataFrame中。如果需要复制，需要显式的使用Series的copy方法。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6918897",
+   "metadata": {},
+   "source": [
+    "包含字典的嵌套字数据形式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "87dba37c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      Nevada  Ohio\n",
+      "2001     2.4   1.7\n",
+      "2002     2.9   3.6\n",
+      "2000     NaN   1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "pop={'Nevada':{2001:2.4,2002:2.9},\n",
+    "    'Ohio':{2000:1.5,2001:1.7,2002:3.6}}\n",
+    "#将其赋值给DataFrame，pandas会将字典的键作为列，将内部字典的键作为行索引。\n",
+    "frame3=pd.DataFrame(pop)\n",
+    "print(frame3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "47db0834",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        2001  2002  2000\n",
+      "Nevada   2.4   2.9   NaN\n",
+      "Ohio     1.7   3.6   1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#转置操作\n",
+    "print(frame3.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fd20a74d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2.4 1.7]\n",
+      " [2.9 3.6]\n",
+      " [nan 1.5]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#和Series类似，DataFrame的values属性会将包含的数据以二维ndarray的形式返回\n",
+    "print(frame3.values)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "757d5102",
+   "id": "694acad0",
    "metadata": {},
    "outputs": [],
    "source": []
