--- a/pandas入门.ipynb
+++ b/pandas入门.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "b3224126",
    "metadata": {},
    "outputs": [],
@@ -685,14 +685,467 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ee60b76d",
+   "metadata": {},
+   "source": [
+    "#### 重建索引"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "3d840107",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d    4.4\n",
+      "b    7.2\n",
+      "a   -5.3\n",
+      "c    3.6\n",
+      "dtype: float64\n",
+      "a   -5.3\n",
+      "b    7.2\n",
+      "c    3.6\n",
+      "d    4.4\n",
+      "e    NaN\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj=pd.Series([4.4,7.2,-5.3,3.6],index=['d','b','a','c'])\n",
+    "print(obj)\n",
+    "#调用reindex方法，会将数据按照新的索引进行排列，不存在的索引会引入缺省值\n",
+    "obj2=obj.reindex(['a','b','c','d','e'])\n",
+    "print(obj2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "dc53c48c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0      blue\n",
+      "2    purple\n",
+      "4    yellow\n",
+      "dtype: object\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0      blue\n",
+       "1      blue\n",
+       "2    purple\n",
+       "3    purple\n",
+       "4    yellow\n",
+       "5    yellow\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#ffill在重建索引时向前填充\n",
+    "obj3=pd.Series(['blue','purple','yellow'],index=[0,2,4])\n",
+    "print(obj3)\n",
+    "obj3.reindex(range(6),method='ffill')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6098f84",
+   "metadata": {},
+   "source": [
+    "#### 在DataFrame中，reindex可以改变行索引、列索引，也可以同时改变"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b43d3530",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Ohio  Texas  California\n",
+      "a     0      1           2\n",
+      "d     3      4           5\n",
+      "c     6      7           8\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame=pd.DataFrame(np.arange(9).reshape((3,3)),\n",
+    "                  index=['a','d','c'],\n",
+    "                  columns=['Ohio','Texas','California'])\n",
+    "print(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "92a86380",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Ohio  Texas  California\n",
+      "a   0.0    1.0         2.0\n",
+      "b   NaN    NaN         NaN\n",
+      "c   6.0    7.0         8.0\n",
+      "d   3.0    4.0         5.0\n",
+      "   Texas  Utah  California\n",
+      "a      1   NaN           2\n",
+      "d      4   NaN           5\n",
+      "c      7   NaN           8\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame2=frame.reindex(['a','b','c','d'])\n",
+    "print(frame2)\n",
+    "states=['Texas','Utah','California']\n",
+    "frame=frame.reindex(columns=states)\n",
+    "print(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "d5c47045",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Texas  California\n",
+      "a      1           2\n",
+      "c      7           8\n",
+      "d      4           5\n"
+     ]
+    }
+   ],
+   "source": [
+    "states=['Texas','California']\n",
+    "#可以使用loc进行更加简洁的标签索引\n",
+    "frame=frame.loc[['a','c','d'],states] #loc只能选择列表中含有的行和列，不可以自动添加不存在的值\n",
+    "print(frame)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6eec3f8d",
+   "metadata": {},
+   "source": [
+    "### 5.2.2轴向上删除条目"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d6ce36b",
+   "metadata": {},
+   "source": [
+    "#### axis=1表式列，axis=0表示行"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "a3dc9a6f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          one  two  three  four\n",
+      "Ohio        0    1      2     3\n",
+      "Colorado    4    5      6     7\n",
+      "Utah        8    9     10    11\n",
+      "New Year   12   13     14    15\n",
+      "          one  two  three  four\n",
+      "Utah        8    9     10    11\n",
+      "New Year   12   13     14    15           three  four\n",
+      "Ohio          2     3\n",
+      "Colorado      6     7\n",
+      "Utah         10    11\n",
+      "New Year     14    15           one  three\n",
+      "Ohio        0      2\n",
+      "Colorado    4      6\n",
+      "Utah        8     10\n",
+      "New Year   12     14\n"
+     ]
+    }
+   ],
+   "source": [
+    "data=pd.DataFrame(np.arange(16).reshape((4,4)),\n",
+    "                  index=['Ohio','Colorado','Utah','New Year'],\n",
+    "                  columns=['one','two','three','four'])\n",
+    "print(data)\n",
+    "data1=data.drop(['Colorado','Ohio'])  #默认axis为0，删除行\n",
+    "data2=data.drop(['two','one'],axis=1)\n",
+    "data3=data.drop(['two','four'],axis='columns')\n",
+    "print(data1,data2,data3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9a2bcbcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>three</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Ohio</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Colorado</th>\n",
+       "      <td>4</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Utah</th>\n",
+       "      <td>8</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New Year</th>\n",
+       "      <td>12</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          one  three\n",
+       "Ohio        0      2\n",
+       "Colorado    4      6\n",
+       "Utah        8     10\n",
+       "New Year   12     14"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#drop函数直接操作原对象，不返回新对象\n",
+    "data.drop(['two','four'],axis='columns')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86ea2fec",
+   "metadata": {},
+   "source": [
+    "### 5.2.3索引、选择与过滤"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c019a7a6",
+   "metadata": {},
+   "source": [
+    "#### loc使用轴标签，iloc使用整数标签"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f353c8d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ohio        1\n",
+       "Colorado    5\n",
+       "Utah        9\n",
+       "Name: two, dtype: int32"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.loc[:'Utah','two']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "d1e1318a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "      <th>three</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Colorado</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Utah</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>New Year</th>\n",
+       "      <td>12</td>\n",
+       "      <td>13</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          one  two  three\n",
+       "Colorado    4    5      6\n",
+       "Utah        8    9     10\n",
+       "New Year   12   13     14"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[:,:3][data.three>5]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11fd944a",
+   "metadata": {},
+   "source": [
+    "### 5.2.4整数索引"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d90a039",
+   "metadata": {},
+   "source": [
+    "#### 使用整数索引有可能会由于数据内的值产生歧义，所以为了更精确的处理，可以使用loc或iloc显示的指明此处所用的索引类型。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f7c90a10",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    0.0\n",
+      "1    1.0\n",
+      "2    2.0\n",
+      "dtype: float64\n",
+      "0    0.0\n",
+      "dtype: float64\n",
+      "0    0.0\n",
+      "1    1.0\n",
+      "dtype: float64\n",
+      "0    0.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "ser=pd.Series(np.arange(3.))\n",
+    "print(ser)\n",
+    "print(ser[:1])\n",
+    "print(ser.loc[:1])\n",
+    "print(ser.iloc[:1])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e2cd1e0",
+   "id": "a5f3a3a6",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "s"
-   ]
+   "source": []
   }
  ],
  "metadata": {
