--- a/pandas入门.ipynb
+++ b/pandas入门.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b3224126",
    "metadata": {},
    "outputs": [],
@@ -1140,14 +1140,355 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5a1590c5",
+   "metadata": {},
+   "source": [
+    "### 5.2.5算术和数据对齐"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6fd9c37c",
+   "metadata": {},
+   "source": [
+    "#### 将对象相加时，如果存在某个索引对不相同，则返回结果的索引是索引对的并集。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a963db8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     a    b     c     d\n",
+      "0  0.0  1.0   2.0   3.0\n",
+      "1  4.0  5.0   6.0   7.0\n",
+      "2  8.0  9.0  10.0  11.0\n",
+      "      a     b     c     d     e\n",
+      "0   0.0   1.0   2.0   3.0   4.0\n",
+      "1   5.0   NaN   7.0   8.0   9.0\n",
+      "2  10.0  11.0  12.0  13.0  14.0\n",
+      "3  15.0  16.0  17.0  18.0  19.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#使用填充值的算术方法\n",
+    "df1=pd.DataFrame(np.arange(12.).reshape((3,4)),\n",
+    "                columns=list('abcd'))\n",
+    "df2=pd.DataFrame(np.arange(20.).reshape((4,5)),\n",
+    "                columns=list('abcde'))\n",
+    "df2.loc[1,'b']=np.nan\n",
+    "print(df1)\n",
+    "print(df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c5981a78",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      a     b     c     d   e\n",
+      "0   0.0   2.0   4.0   6.0 NaN\n",
+      "1   9.0   NaN  13.0  15.0 NaN\n",
+      "2  18.0  20.0  22.0  24.0 NaN\n",
+      "3   NaN   NaN   NaN   NaN NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "#将以上df添加到一起会导致在一些不重叠的位置出现NA值\n",
+    "print(df1+df2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "00560647",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      a     b     c     d     e\n",
+      "0   0.0   2.0   4.0   6.0   4.0\n",
+      "1   9.0   5.0  13.0  15.0   9.0\n",
+      "2  18.0  20.0  22.0  24.0  14.0\n",
+      "3  15.0  16.0  17.0  18.0  19.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#在df1上使用add方法，将df2和一个fill_value作为参数传入\n",
+    "print(df1.add(df2,fill_value=0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "9acb4fa1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     a    b     c     d\n",
+      "0  0.0  1.0   2.0   3.0\n",
+      "1  4.0  5.0   6.0   7.0\n",
+      "2  8.0  9.0  10.0  11.0\n",
+      "0    1.0\n",
+      "1    5.0\n",
+      "2    9.0\n",
+      "Name: b, dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df=df1['b']\n",
+    "print(df1)\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5d2b2a05",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     a    b    c    d\n",
+      "0 -1.0  0.0  1.0  2.0\n",
+      "1 -1.0  0.0  1.0  2.0\n",
+      "2 -1.0  0.0  1.0  2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df1.sub(df,axis='index'))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "349ab17a",
+   "metadata": {},
+   "source": [
+    "### 5.2.6函数应用和映射"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "bb3e233a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "               b         d         e\n",
+      "Utah    1.006485 -0.305028 -0.591989\n",
+      "Ohio   -1.783913 -0.490347 -0.646261\n",
+      "Texas   2.569576  0.034955 -1.060071\n",
+      "Oregon  0.975454 -0.308049 -1.103343\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame=pd.DataFrame(np.random.randn(4,3),columns=list('bde'),\n",
+    "                  index=['Utah','Ohio','Texas','Oregon'])\n",
+    "print(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8d6b87ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>b</th>\n",
+       "      <th>d</th>\n",
+       "      <th>e</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Utah</th>\n",
+       "      <td>1.006485</td>\n",
+       "      <td>0.305028</td>\n",
+       "      <td>0.591989</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ohio</th>\n",
+       "      <td>1.783913</td>\n",
+       "      <td>0.490347</td>\n",
+       "      <td>0.646261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Texas</th>\n",
+       "      <td>2.569576</td>\n",
+       "      <td>0.034955</td>\n",
+       "      <td>1.060071</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Oregon</th>\n",
+       "      <td>0.975454</td>\n",
+       "      <td>0.308049</td>\n",
+       "      <td>1.103343</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               b         d         e\n",
+       "Utah    1.006485  0.305028  0.591989\n",
+       "Ohio    1.783913  0.490347  0.646261\n",
+       "Texas   2.569576  0.034955  1.060071\n",
+       "Oregon  0.975454  0.308049  1.103343"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.abs(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "95356984",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b    4.353490\n",
+      "d    0.525302\n",
+      "e    0.511354\n",
+      "dtype: float64\n",
+      "Utah      1.598474\n",
+      "Ohio      1.293566\n",
+      "Texas     3.629647\n",
+      "Oregon    2.078797\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#apply方法\n",
+    "f=lambda x: x.max()-x.min()\n",
+    "print(frame.apply(f)) #f会被frame中的每一列被调用一次\n",
+    "#如果传入axis=’columns‘给apply，函数每行将被调用\n",
+    "print(frame.apply(f,axis='columns'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c7e6fe2",
+   "metadata": {},
+   "source": [
+    "#### 传递给apply的函数不一定只要一个返回值，也可以包含多个返回值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "344d907d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            b         d         e\n",
+      "min -1.783913 -0.490347 -1.103343\n",
+      "max  2.569576  0.034955 -0.591989\n"
+     ]
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return pd.Series([x.min(),x.max()],index=['min','max'])\n",
+    "print(frame.apply(f))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7c74ddcc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            b      d      e\n",
+      "Utah     1.01  -0.31  -0.59\n",
+      "Ohio    -1.78  -0.49  -0.65\n",
+      "Texas    2.57   0.03  -1.06\n",
+      "Oregon   0.98  -0.31  -1.10\n",
+      "Utah      -0.59\n",
+      "Ohio      -0.65\n",
+      "Texas     -1.06\n",
+      "Oregon    -1.10\n",
+      "Name: e, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#想要逐元素的python函数，可以使用applymap方法\n",
+    "format=lambda x: '%.2f' %x\n",
+    "print(frame.applymap(format))\n",
+    "print(frame['e'].map(format))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5f3a3a6",
+   "id": "9bfa137e",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    噶"
-   ]
+   "source": []
   }
  ],
  "metadata": {
