--- a/pandas入门.ipynb
+++ b/pandas入门.ipynb
@@ -1141,7 +1141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a1590c5",
+   "id": "aa6f2b90",
    "metadata": {},
    "source": [
     "### 5.2.5算术和数据对齐"
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6fd9c37c",
+   "id": "34de3662",
    "metadata": {},
    "source": [
     "#### 将对象相加时，如果存在某个索引对不相同，则返回结果的索引是索引对的并集。"
@@ -1158,7 +1158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a963db8f",
+   "id": "0a1d213c",
    "metadata": {},
    "outputs": [
     {
@@ -1191,7 +1191,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c5981a78",
+   "id": "ce7834fd",
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1214,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "00560647",
+   "id": "0dc5adb1",
    "metadata": {},
    "outputs": [
     {
@@ -1237,7 +1237,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "9acb4fa1",
+   "id": "c808a461",
    "metadata": {},
    "outputs": [
     {
@@ -1264,7 +1264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5d2b2a05",
+   "id": "b40f7fb3",
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "349ab17a",
+   "id": "8819c1b5",
    "metadata": {},
    "source": [
     "### 5.2.6函数应用和映射"
@@ -1293,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bb3e233a",
+   "id": "8777e613",
    "metadata": {},
    "outputs": [
     {
@@ -1317,7 +1317,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8d6b87ce",
+   "id": "55dbb611",
    "metadata": {},
    "outputs": [
     {
@@ -1395,7 +1395,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "95356984",
+   "id": "2f0a0a90",
    "metadata": {},
    "outputs": [
     {
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c7e6fe2",
+   "id": "d3eda753",
    "metadata": {},
    "source": [
     "#### 传递给apply的函数不一定只要一个返回值，也可以包含多个返回值"
@@ -1433,7 +1433,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "344d907d",
+   "id": "26114ef2",
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7c74ddcc",
+   "id": "215c651e",
    "metadata": {},
    "outputs": [
     {
@@ -1483,9 +1483,463 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e6b3a112",
+   "metadata": {},
+   "source": [
+    "### 5.2.7 排名和排序"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "ec9814d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a    0\n",
+      "b    2\n",
+      "c    3\n",
+      "d    1\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "#对数据集进行排序的一个重要内建操作。\n",
+    "#按行或列索引进行字典型排序，需要使用sort_index方法\n",
+    "obj=pd.Series(range(4),index=['a','d','b','c'])\n",
+    "print(obj.sort_index())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "85806cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<bound method DataFrame.sort_index of        d  a  b  c\n",
+      "three  0  1  2  3\n",
+      "one    4  5  6  7>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#在DataFrame中，可以在各个轴上按索引排序\n",
+    "frame=pd.DataFrame(np.arange(8).reshape((2,4)),\n",
+    "                  index=['three','one'],\n",
+    "                  columns=['d','a','b','c'])\n",
+    "print(frame.sort_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "6ac45644",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       a  b  c  d\n",
+      "three  1  2  3  0\n",
+      "one    5  6  7  4\n",
+      "       d  c  b  a\n",
+      "three  0  3  2  1\n",
+      "one    4  7  6  5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#按列排序\n",
+    "print(frame.sort_index(axis=1))\n",
+    "#降序排序\n",
+    "print(frame.sort_index(axis=1,ascending=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "be567844",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   b  a\n",
+      "0  4  0\n",
+      "1  7  1\n",
+      "2 -3  0\n",
+      "3  2  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#可以选择列进行排序，将列名作为参数传递给函数\n",
+    "frame=pd.DataFrame({'b':[4,7,-3,2],'a':[0,1,0,1]})\n",
+    "print(frame)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "779d94a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   b  a\n",
+      "2 -3  0\n",
+      "3  2  1\n",
+      "0  4  0\n",
+      "1  7  1\n",
+      "   b  a\n",
+      "2 -3  0\n",
+      "0  4  0\n",
+      "3  2  1\n",
+      "1  7  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(frame.sort_values(by='b'))\n",
+    "print(frame.sort_values(by=['a','b']))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "fa0efc01",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    6.5\n",
+      "1    1.0\n",
+      "2    6.5\n",
+      "3    4.5\n",
+      "4    3.0\n",
+      "5    2.0\n",
+      "6    4.5\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#rank排名函数\n",
+    "obj=pd.Series([7,-5,7,4,2,0,4])\n",
+    "print(obj.rank())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "7d9481d5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    6.0\n",
+      "1    1.0\n",
+      "2    7.0\n",
+      "3    4.0\n",
+      "4    3.0\n",
+      "5    2.0\n",
+      "6    5.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#排名时，如果并列不取平均，按观察的顺序排序\n",
+    "print(obj.rank(method='first'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "7686b7c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    2.0\n",
+      "1    7.0\n",
+      "2    2.0\n",
+      "3    4.0\n",
+      "4    5.0\n",
+      "5    6.0\n",
+      "6    4.0\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "#将值分配给组中的最大排名\n",
+    "print(obj.rank(ascending=False,method='max'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "7938fd20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     b    a    c\n",
+      "0  3.0  2.0  1.0\n",
+      "1  3.0  1.0  2.0\n",
+      "2  1.0  2.0  3.0\n",
+      "3  3.0  2.0  1.0\n",
+      "     b    a    c\n",
+      "0  3.0  1.5  2.0\n",
+      "1  4.0  3.5  3.0\n",
+      "2  1.0  1.5  4.0\n",
+      "3  2.0  3.5  1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "frame=pd.DataFrame({'b':[4.3,7,-3,2],'a':[0,1,0,1],'c':[-2,5,8,-2.5]})\n",
+    "print(frame.rank(axis='columns'))\n",
+    "print(frame.rank())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7bbfe4e7",
+   "metadata": {},
+   "source": [
+    "### 5.2.8 含有重复标签的轴索引"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "534505a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#is_unique用来判断标签是否唯一\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "064db311",
+   "metadata": {},
+   "source": [
+    "## 5.3 描述性统计的概述与计算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "cbb1ecee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    one  two\n",
+      "a  1.40  NaN\n",
+      "b  7.10 -4.5\n",
+      "c   NaN  NaN\n",
+      "d  0.75 -1.3\n",
+      "one    9.25\n",
+      "two   -5.80\n",
+      "dtype: float64\n",
+      "a    1.40\n",
+      "b    2.60\n",
+      "c    0.00\n",
+      "d   -0.55\n",
+      "dtype: float64\n",
+      "a      NaN\n",
+      "b    1.300\n",
+      "c      NaN\n",
+      "d   -0.275\n",
+      "dtype: float64\n"
+     ]
+    }
+   ],
+   "source": [
+    "df=pd.DataFrame([[1.4,np.nan],[7.1,-4.5],\n",
+    "                [np.nan,np.nan],[0.75,-1.3]],\n",
+    "               index=['a','b','c','d'],\n",
+    "               columns=['one','two'])\n",
+    "print(df)\n",
+    "#包含列上加和\n",
+    "print(df.sum())\n",
+    "#包含行上加和\n",
+    "print(df.sum(axis='columns'))\n",
+    "#使用skipna来实现不排除NA值\n",
+    "print(df.mean(axis='columns',skipna=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "490e947f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>2.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>3.083333</td>\n",
+       "      <td>-2.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>3.493685</td>\n",
+       "      <td>2.262742</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>0.750000</td>\n",
+       "      <td>-4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>1.075000</td>\n",
+       "      <td>-3.700000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>1.400000</td>\n",
+       "      <td>-2.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>4.250000</td>\n",
+       "      <td>-2.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>7.100000</td>\n",
+       "      <td>-1.300000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            one       two\n",
+       "count  3.000000  2.000000\n",
+       "mean   3.083333 -2.900000\n",
+       "std    3.493685  2.262742\n",
+       "min    0.750000 -4.500000\n",
+       "25%    1.075000 -3.700000\n",
+       "50%    1.400000 -2.900000\n",
+       "75%    4.250000 -2.100000\n",
+       "max    7.100000 -1.300000"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "215d7dcd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "count     16\n",
+      "unique     3\n",
+      "top        a\n",
+      "freq       8\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "#非数值型数据\n",
+    "obj=pd.Series(['a','a','b','c']*4)\n",
+    "print(obj.describe())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f36b544",
+   "metadata": {},
+   "source": [
+    "### 5.3.1 相关性和协方差"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9bfa137e",
+   "id": "7fdbb88a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conda install pandas-datareader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d402d23",
    "metadata": {},
    "outputs": [],
    "source": []
