--- a/数据载入、存储及文件格式.ipynb
+++ b/数据载入、存储及文件格式.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "298b5e00",
+   "id": "4eabd631",
    "metadata": {},
    "source": [
     "## 6.1 文本格式数据读写"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "0393062f",
+   "id": "530f63c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c4ebe2cc",
+   "id": "1281733b",
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "8f5e81a3",
+   "id": "fdb390da",
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "86dc50c7",
+   "id": "6679e842",
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ef3a4b2c",
+   "id": "67b0911d",
    "metadata": {},
    "outputs": [
     {
@@ -187,21 +187,106 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b67c47b8",
+   "id": "b58b9d9b",
    "metadata": {},
    "source": [
     "### 6.1.2 将数据写入文本格式"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5aedb30",
+   "metadata": {},
+   "source": [
+    "#### 存入文件时，可以自定义分隔符：sep='|'\n",
+    "#### 用其他标识值对缺失值进行标注：na_rep='NULL'\n",
+    "#### 行列标签禁止写入：index=False,header=False\n",
+    "#### 写入列的子集，对列赋列表：columns=['a','b','c']"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee0907a0",
+   "metadata": {},
+   "source": [
+    "### 6.1.4 JSON数据"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "a479e035",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'wes', 'places_lived': ['United States', 'Spain', 'Germany'], 'pet': None, 'siblings': [{'name': 'Scott', 'age': 30, 'pets': ['Zeus', 'Zuko']}, {'name': 'Katie', 'age': 38, 'pets': ['Sixes', 'Stache', 'Cisco']}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "obj=\"\"\"\n",
+    "{\n",
+    "\"name\":\"wes\",\n",
+    "\"places_lived\":[\"United States\",\"Spain\",\"Germany\"],\n",
+    "\"pet\":null,\n",
+    "\"siblings\":[{\"name\":\"Scott\",\"age\":30,\"pets\":[\"Zeus\",\"Zuko\"]},\n",
+    "{\"name\":\"Katie\",\"age\":38,\"pets\":[\"Sixes\",\"Stache\",\"Cisco\"]}]\n",
+    "}\"\"\"\n",
+    "import json\n",
+    "result=json.loads(obj)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "70f3c681",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    name  age\n",
+      "0  Scott   30\n",
+      "1  Katie   38\n"
+     ]
+    }
+   ],
+   "source": [
+    "#JSON转为DataFrame\n",
+    "siblings=pd.DataFrame(result['siblings'],columns=['name','age'])# 选择对应得行列\n",
+    "print(siblings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "8bc563d9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"name\":{\"0\":\"Scott\",\"1\":\"Katie\"},\"age\":{\"0\":30,\"1\":38}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(siblings.to_json())#字典不可以转换为json，Series和DataFrame可以输出为json"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7c0eeaa",
+   "id": "f93efbb8",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
