--- a/数据清洗与准备.ipynb
+++ b/数据清洗与准备.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "88da844c",
+   "id": "e1ad8b08",
    "metadata": {},
    "source": [
     "## 7.1 处理缺失值\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "631a6e57",
+   "id": "bb68883c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "bad7cf57",
+   "id": "2884137d",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "c3e19652",
+   "id": "ff33df49",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ecd01bfe",
+   "id": "b2b083d7",
    "metadata": {},
    "source": [
     "### 7.1.2 补全缺失值"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "2c93e248",
+   "id": "b9f14f77",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d9d8e31c",
+   "id": "f7a33d40",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "5f41119c",
+   "id": "8573e8ed",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a59046f5",
+   "id": "40d21cac",
    "metadata": {},
    "source": [
     "## 7.2 数据转换\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "ea1c9cc6",
+   "id": "325dbfeb",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "96965464",
+   "id": "20418913",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "5718b754",
+   "id": "1c4f1296",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "94fc0e58",
+   "id": "1e364a1c",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "ab043a32",
+   "id": "f084e7e0",
    "metadata": {},
    "outputs": [
     {
@@ -701,9 +701,531 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "014a47a3",
+   "metadata": {},
+   "source": [
+    "### 7.2.2 使用函数或映射进行数据转换"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "09d574e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>food</th>\n",
+       "      <th>ounces</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pulled pork</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>12.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pastrami</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>corned beef</td>\n",
+       "      <td>7.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bacon</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>pastrami</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>honey ham</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>nova lox</td>\n",
+       "      <td>6.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          food  ounces\n",
+       "0        bacon     4.0\n",
+       "1  pulled pork     3.0\n",
+       "2        bacon    12.0\n",
+       "3     Pastrami     6.0\n",
+       "4  corned beef     7.5\n",
+       "5        Bacon     8.0\n",
+       "6     pastrami     3.0\n",
+       "7    honey ham     5.0\n",
+       "8     nova lox     6.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=pd.DataFrame({'food':['bacon','pulled pork','bacon','Pastrami','corned beef','Bacon','pastrami','honey ham','nova lox'],\n",
+    "                  'ounces':[4,3,12,6,7.5,8,3,5,6]})\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "cad78667",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>food</th>\n",
+       "      <th>ounces</th>\n",
+       "      <th>animal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>pulled pork</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>bacon</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Pastrami</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>cow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>corned beef</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>cow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Bacon</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>pastrami</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>cow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>honey ham</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>pig</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>nova lox</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>salmon</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          food  ounces  animal\n",
+       "0        bacon     4.0     pig\n",
+       "1  pulled pork     3.0     pig\n",
+       "2        bacon    12.0     pig\n",
+       "3     Pastrami     6.0     cow\n",
+       "4  corned beef     7.5     cow\n",
+       "5        Bacon     8.0     pig\n",
+       "6     pastrami     3.0     cow\n",
+       "7    honey ham     5.0     pig\n",
+       "8     nova lox     6.0  salmon"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#添加一列肉的类型\n",
+    "meat_to_animal={\n",
+    "    'bacon':'pig',\n",
+    "    'pulled pork':'pig',\n",
+    "    'pastrami':'cow',\n",
+    "    'corned beef':'cow',\n",
+    "    'honey ham':'pig',\n",
+    "    'nova lox':'salmon'\n",
+    "}\n",
+    "lowercased=data['food'].str.lower()#将字母全都变成小写\n",
+    "data['animal']=lowercased.map(meat_to_animal)  #用map进行匹配\n",
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "359c895a",
+   "metadata": {},
+   "source": [
+    "### 7.2.3 替代值"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "4947304a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       1.0\n",
+       "1       NaN\n",
+       "2       2.0\n",
+       "3       NaN\n",
+       "4   -1000.0\n",
+       "5       3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=pd.Series([1.,-999.,2.,-999.,-1000.,3.])\n",
+    "data.replace(-999,np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0ffa4f9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    NaN\n",
+       "2    2.0\n",
+       "3    NaN\n",
+       "4    NaN\n",
+       "5    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#一次替代多个值\n",
+    "data.replace([-999,-1000],np.nan)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "30ff0409",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    NaN\n",
+       "2    2.0\n",
+       "3    NaN\n",
+       "4    0.0\n",
+       "5    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.replace([-999,-1000],[np.nan,0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "605a4cd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    1.0\n",
+       "1    NaN\n",
+       "2    2.0\n",
+       "3    NaN\n",
+       "4    0.0\n",
+       "5    3.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#参数也可以通过字典传递\n",
+    "data.replace({-999:np.nan,-1000:0})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e8ae3df4",
+   "metadata": {},
+   "source": [
+    "### 7.2.4 重命名轴索引"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "e5415e83",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "      <th>three</th>\n",
+       "      <th>four</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>OHIO</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COLO</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEW</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      one  two  three  four\n",
+       "OHIO    0    1      2     3\n",
+       "COLO    4    5      6     7\n",
+       "NEW     8    9     10    11"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data=pd.DataFrame(np.arange(12).reshape((3,4)),\n",
+    "                 index=['Ohio','Colorado','New York'],\n",
+    "                 columns=['one','two','three','four'])\n",
+    "#与Series类似，轴索引也有一个man方法\n",
+    "transform=lambda x: x[:4].upper()\n",
+    "data.index=data.index.map(transform)\n",
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "9fd2ca8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>one</th>\n",
+       "      <th>two</th>\n",
+       "      <th>peekaboo</th>\n",
+       "      <th>four</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>INDIANA</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>COLO</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>NEW</th>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>10</td>\n",
+       "      <td>11</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         one  two  peekaboo  four\n",
+       "INDIANA    0    1         2     3\n",
+       "COLO       4    5         6     7\n",
+       "NEW        8    9        10    11"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#改名\n",
+    "data.rename(index={'OHIO':'INDIANA'},\n",
+    "           columns={'three':'peekaboo'})"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "237654ec",
+   "id": "5018ab4d",
    "metadata": {},
    "outputs": [],
    "source": []
