--- a/数据清洗与准备.ipynb
+++ b/数据清洗与准备.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0631ce4a",
+   "id": "da2d348a",
    "metadata": {},
    "source": [
     "## 7.1 处理缺失值\n",
@@ -12,7 +12,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "98636b41",
+   "id": "e8de8804",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "070c29af",
+   "id": "fa84a6c5",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "3ed5526e",
+   "id": "efd03007",
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91b60653",
+   "id": "88c6a5c3",
    "metadata": {},
    "source": [
     "### 7.1.2 补全缺失值"
@@ -103,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "25471826",
+   "id": "385311a5",
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "9be75e0e",
+   "id": "43007e4a",
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "dde3f7f5",
+   "id": "02b3ce15",
    "metadata": {},
    "outputs": [
     {
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f6fb0ea",
+   "id": "996d8e2b",
    "metadata": {},
    "source": [
     "## 7.2 数据转换\n",
@@ -339,7 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7531b859",
+   "id": "16b67ca5",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "f62c22f1",
+   "id": "15c3472d",
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "77c915c5",
+   "id": "8e2d4294",
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +546,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3440447f",
+   "id": "e3c3ef2e",
    "metadata": {},
    "outputs": [
     {
@@ -611,7 +611,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "7f2dd970",
+   "id": "dfe1388e",
    "metadata": {},
    "outputs": [
     {
@@ -702,7 +702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d8072cc",
+   "id": "402c5036",
    "metadata": {},
    "source": [
     "### 7.2.2 使用函数或映射进行数据转换"
@@ -711,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "2dd2fd63",
+   "id": "f728742f",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "138fad57",
+   "id": "78fb2559",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3ce2c618",
+   "id": "7e02a01c",
    "metadata": {},
    "source": [
     "### 7.2.3 替代值"
@@ -948,7 +948,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "ff68ca54",
+   "id": "6860e99d",
    "metadata": {},
    "outputs": [
     {
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "341d4ca8",
+   "id": "322ab40d",
    "metadata": {},
    "outputs": [
     {
@@ -1004,7 +1004,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "fa839d5e",
+   "id": "e9b0fe51",
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4f30b37e",
+   "id": "ac2f1e2c",
    "metadata": {},
    "outputs": [
     {
@@ -1058,7 +1058,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79be87b0",
+   "id": "5ef1b0be",
    "metadata": {},
    "source": [
     "### 7.2.4 重命名轴索引"
@@ -1067,7 +1067,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "a56146c2",
+   "id": "daffc740",
    "metadata": {},
    "outputs": [
     {
@@ -1148,7 +1148,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "b536717c",
+   "id": "4e763716",
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8e319e4",
+   "id": "4e214a39",
    "metadata": {},
    "source": [
     "### 7.2.5 离散化和分箱"
@@ -1233,7 +1233,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0b7c0803",
+   "id": "6a09227e",
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1260,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "b01392ae",
+   "id": "2755a8f6",
    "metadata": {},
    "outputs": [
     {
@@ -1281,7 +1281,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "acbd67c2",
+   "id": "b6e38640",
    "metadata": {},
    "outputs": [
     {
@@ -1304,7 +1304,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "d18a0448",
+   "id": "356eb24a",
    "metadata": {},
    "outputs": [
     {
@@ -1329,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "05247e99",
+   "id": "e187fb69",
    "metadata": {},
    "outputs": [
     {
@@ -1352,7 +1352,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "e614ecb8",
+   "id": "143b1aff",
    "metadata": {},
    "outputs": [
     {
@@ -1377,7 +1377,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "00721500",
+   "id": "73e25136",
    "metadata": {},
    "outputs": [
     {
@@ -1402,7 +1402,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "9a1dcb60",
+   "id": "b5b586e7",
    "metadata": {},
    "outputs": [
     {
@@ -1427,7 +1427,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "65591f83",
+   "id": "5dc11a2c",
    "metadata": {},
    "outputs": [
     {
@@ -1453,7 +1453,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "bd7215a2",
+   "id": "57f56199",
    "metadata": {},
    "outputs": [
     {
@@ -1477,7 +1477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "169cbc81",
+   "id": "131957de",
    "metadata": {},
    "source": [
     "### 7.2.6 检测或过滤异常值"
@@ -1486,7 +1486,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ed3a8343",
+   "id": "21d63056",
    "metadata": {},
    "outputs": [
     {
@@ -1602,7 +1602,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "cc347046",
+   "id": "a3680d38",
    "metadata": {},
    "outputs": [
     {
@@ -1629,7 +1629,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "58107e6b",
+   "id": "6d681cce",
    "metadata": {},
    "outputs": [
     {
@@ -1769,7 +1769,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4904c21a",
+   "id": "d68f6c69",
    "metadata": {},
    "outputs": [
     {
@@ -1886,7 +1886,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "26faf69f",
+   "id": "7c318b03",
    "metadata": {},
    "outputs": [
     {
@@ -1977,7 +1977,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b82df6",
+   "id": "98e618b0",
    "metadata": {},
    "source": [
     "### 7.2.7 置换和随机抽样"
@@ -1986,7 +1986,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "1bcb068f",
+   "id": "1ded63a8",
    "metadata": {},
    "outputs": [
     {
@@ -2009,7 +2009,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "bc960a7f",
+   "id": "216dc95e",
    "metadata": {},
    "outputs": [
     {
@@ -2100,7 +2100,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "c246dd3d",
+   "id": "c8f12959",
    "metadata": {},
    "outputs": [
     {
@@ -2191,7 +2191,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2f8894d7",
+   "id": "f7fc9166",
    "metadata": {},
    "outputs": [
     {
@@ -2266,7 +2266,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "f587f704",
+   "id": "d25d787c",
    "metadata": {},
    "outputs": [
     {
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2aa7d5a",
+   "id": "a0271f30",
    "metadata": {},
    "source": [
     "### 7.2.8 计算指标/虚拟变量\n"
@@ -2308,7 +2308,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "cc6222ca",
+   "id": "ecd6be4b",
    "metadata": {},
    "outputs": [
     {
@@ -2402,7 +2402,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "17b48bba",
+   "id": "35951917",
    "metadata": {},
    "outputs": [
     {
@@ -2504,7 +2504,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "13658c14",
+   "id": "92188bb9",
    "metadata": {},
    "outputs": [
     {
@@ -2529,7 +2529,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "fc47689b",
+   "id": "b3d82031",
    "metadata": {},
    "outputs": [
     {
@@ -2672,7 +2672,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "5d64bee7",
+   "id": "d878db06",
    "metadata": {},
    "outputs": [
     {
@@ -2694,9 +2694,308 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d9b62082",
+   "metadata": {},
+   "source": [
+    "### 7.3.1 字符串对象方法"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "ddf2e2bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['a', 'b', '  guido']"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#split拆解字符串\n",
+    "val='a,b,  guido'\n",
+    "val.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "48d2b433",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a::b::  guido\n",
+      "a::b::  guido\n"
+     ]
+    }
+   ],
+   "source": [
+    "#以下两个方法可以产生同样的效果\n",
+    "f,s,t=val.split(',')\n",
+    "print(f+'::'+s+'::'+t)\n",
+    "print('::'.join(val.split(',')))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "20be8fda",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val.count(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "929acefa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'a::b::  guido'"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val.replace(',','::')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "272d2f7a",
+   "metadata": {},
+   "source": [
+    "### 7.3.2 正则表达式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "3cb09b4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['foo', 'bar', 'baz', 'qux']"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "text=\"foo    bar\\t baz  \\tqux\"\n",
+    "re.split('\\s+',text)\n",
+    "#当调用re.split，正则表达式首先会被编译，然后正则表达式的split方法再传入文本上被调用。可以使用re.compile自行编译，形成一个可复用的正则表达式对象"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "a2b9a61e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['foo', 'bar', 'baz', 'qux']"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regex=re.compile('\\s+')\n",
+    "regex.split(text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9f93f929",
+   "metadata": {},
+   "source": [
+    "#### findall: 返回的是字符串中所有的匹配项\n",
+    "#### search: 返回的仅仅是第一项\n",
+    "#### match: 它只在字符串的起始位置进行匹配"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "ee182206",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['dave@goole.com', 'steve@gmail.com', 'rob@gmain.com', 'ryan@yahoo.com']"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text=\"\"\"\n",
+    "Dave dave@goole.com\n",
+    "Steve steve@gmail.com\n",
+    "Rob rob@gmain.com\n",
+    "Ryan ryan@yahoo.com\"\"\"\n",
+    "pattern=r'[A-Z0-9._%+-]+@[A-Z0-9.-]+\\.[A-Z]{2,4}'\n",
+    "regex=re.compile(pattern,flags=re.IGNORECASE)#不区分大小写\n",
+    "#生成一个电子邮件列表\n",
+    "regex.findall(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "874b8f92",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<re.Match object; span=(6, 20), match='dave@goole.com'>"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m=regex.search(text)#返回第一个的存储位置\n",
+    "m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "9d7b75f5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'dave@goole.com'"
+      ]
+     },
+     "execution_count": 86,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text[m.start():m.end()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "112ea6df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(regex.match(text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "1e8c554a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('dave', 'goole', 'com'),\n",
+       " ('steve', 'gmail', 'com'),\n",
+       " ('rob', 'gmain', 'com'),\n",
+       " ('ryan', 'yahoo', 'com')]"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#想要将每个地址分为三个部分，将每个部分用括号括起来\n",
+    "pattern=r'([A-Z0-9._%+-]+)+@([A-Z0-9.-]+)+\\.([A-Z]{2,4})'\n",
+    "regex=re.compile(pattern,flags=re.IGNORECASE)\n",
+    "regex.findall(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "0e05e1be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Dave Username: dave, Domain: goole, Suffix: com\n",
+      "Steve Username: steve, Domain: gmail, Suffix: com\n",
+      "Rob Username: rob, Domain: gmain, Suffix: com\n",
+      "Ryan Username: ryan, Domain: yahoo, Suffix: com\n"
+     ]
+    }
+   ],
+   "source": [
+    "#分组访问\n",
+    "print(regex.sub(r'Username: \\1, Domain: \\2, Suffix: \\3',text))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "319306dc",
+   "id": "466379a1",
    "metadata": {},
    "outputs": [],
    "source": []
